More fontawesome fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,42 +81,42 @@
                         <ul id="navigation">
                             <li {% if current[1] == 'index.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}index.html">
-                                <div class="icon icon-user"></div>
+                                <div class="fa fa-user"></div>
                                 <div class="text">About Me</div>
                               </a>
                             </li>
                             
                            <li {% if current[1] == 'cv.pdf' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}cv.pdf">
-                                  <div class="icon icon-download-alt"></div>
+                                  <div class="fa fa-download"></div>
                                   <div class="text">CV</div>
                               </a>
                             </li>
                             
                             <li {% if current[1] == 'projects.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}projects.html">
-                                <div class="icon icon-book"></div>
+                                <div class="fa fa-book"></div>
                                 <div class="text">Projects</div>
                               </a>
                             </li> 
                             
                             <li {% if current[1] == 'classes.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}classes.html">
-                                <div class="icon icon-edit"></div>
+                                <div class="fa fa-edit"></div>
                                 <div class="text">Classes</div>
                               </a>
                             </li> 
 
                             <li {% if current[1] == 'teaching.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}teaching.html">
-                                <div class="icon icon-time"></div>
+                                <div class="fa fa-time"></div>
                                 <div class="text">Teaching</div>
                               </a>
                             </li>
 
                             <li {% if current[1] == 'contact.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}contact.html">
-                                  <div class="icon icon-calendar"></div>
+                                  <div class="fa fa-calendar"></div>
                                   <div class="text">Contact</div>
                               </a>
                             </li>
