--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,7 +109,7 @@
 
                             <li {% if current[1] == 'teaching.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}teaching.html">
-                                <div class="fa fa-time"></div>
+                                <div class="fa fa-cubes"></div>
                                 <div class="text">Teaching</div>
                               </a>
                             </li>
