--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <meta name="description" content="A personal webpage for Eric Hare" />
         <meta name="keywords" content="eric, hare, statistics, iowa, washington, computer, science" />
 
-        <link rel="shortcut icon" href="../favicon.ico">
+        <link rel="shortcut icon" href="{{ page.root }}favicon.ico">
         
         <script src="https://use.fontawesome.com/cb390d99b3.js"></script>
 
