Another icon fix

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
     <body>
 
         <div id="wrapper">
-            <a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
+            <a href="#sidebar" class="mobilemenu"><i class="fa fa-reorder"></i></a>
 
             <div id="sidebar">
                 <div id="main-nav">
