Update work website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
                                 <a href="index.html"><h2>Eric Hare</h2></a>
-                                <a href="index.html"><h3>Iowa State University</h3></a>
+                                <a href="index.html"><h3>Omni Analytics Group</h3></a>
                             </div>
                             
                         </div>
